--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,13 @@
 }
 
 /* shared style */
+.secondary-bg{
+background-color: #FFF8F3;
+
+}
+
+
+
 .text-primary{
     color: #FD6E0A;
 }
@@ -22,6 +29,17 @@ border-radius: 5px;
 font-size: 20px;
 border: none;
 }
+
+.secton-title{    
+     font-size: 35px;
+     font-weight: bold;
+     color:#181818
+}
+.section-description{ 
+font-size: 18px;
+color: #757575;
+}
+
 
 /* header */
 .header{
@@ -93,4 +111,27 @@ font-weight: bold;
 }
 .banner-profile-pic{
     width: 584px;
+}
+/* main styles */
+.main{   
+max-width: 1140px;
+margin:0 auto ;
+
+}
+
+
+
+
+
+/* about styles */
+.about{
+border-radius: 10px;
+padding: 130px 150px;
+text-align: center;
+margin-top: 130px;
+}
+
+.about-items{
+display: flex;
+justify-content: space-around;
 }
