--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -40,6 +40,9 @@ font-size: 18px;
 color: #757575;
 }
 
+.text-center{
+    text-align: center;
+}
 
 /* header */
 .header{
@@ -116,6 +119,8 @@ font-weight: bold;
 .main{   
 max-width: 1140px;
 margin:0 auto ;
+margin-top: 130px;
+margin-bottom: 130px;
 
 }
 
@@ -128,10 +133,22 @@ margin:0 auto ;
 border-radius: 10px;
 padding: 130px 150px;
 text-align: center;
-margin-top: 130px;
+
 }
 
 .about-items{
 display: flex;
 justify-content: space-around;
+}
+
+/* skills section styles */
+.skills-container{     
+    display: flex;
+    gap: 24px;
+}
+.skill{
+
+    padding: 30px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
 }
