--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,7 +14,32 @@
 background-color: #FFF8F3;
 
 }
+.footer-pd{ 
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+    }
 
+    .footer-column{  
+        width: 50%;
+    }
+
+    footer input[type="text"],footer input[type="email"],footer textarea
+    {
+height: 64px;
+border-radius: 5px;
+background-color: white;
+display: block;
+width: 100%;
+padding: 10px 20px;
+margin-bottom: 24px;
+border: none;
+
+
+
+
+
+    }
 
 
 .text-primary{
@@ -44,6 +69,15 @@ color: #757575;
     text-align: center;
 }
 
+.resume-download-cv{  
+    margin-top: 50px;
+}
+
+
+
+
+
+
 /* header */
 .header{
 background-image: url(../images/developer.png) , url(../images/header_bg.png);
@@ -53,7 +87,9 @@ background-position: top left , bottom right;
 
 }
 
-
+hr{
+    margin: 30px 5px; 
+}
 
 /* nav styles */
 nav{ 
@@ -152,3 +188,21 @@ justify-content: space-around;
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
 border-radius: 5px;
 }
+
+/* resume section styles */
+
+.resume-container{    
+    display: flex;
+    gap: 24px;
+
+.experience-sub-title{  
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px; 
+
+}
+.experience-description ,.experience-sub-title{   
+color: #757575;}
+
+/* footer styles */
+
